# Performance_Analyzer

./: logging.conf  pyproject.toml  requirements.txt  test.py
inputs/: architecture.yml  mapping.yml  mapping_.yml  workload.yml
outputs/: InputSpec.yml
src/analysis_model/: dataflow.py  nest_analysis.py  parser.py  tile_analysis.py  utils.py  validate.py
src/analysis_model/intermediate_config/: architecture_config.py  attributes_config.py  workload_config.py
src/analysis_model/test/: test.py
src/analysis_model/test/inputs/: workload.yml
src/analyzer/: api.py  dataflow.py  nest_analysis.py  network.py  tile_analysis.py  utils.py
src/analyzer/IR/: __init__.py  architecture_config.py  attributes_config.py  base_config.py  mapping_config.py  workload_config.py
